--- a/Exploration map rendering.ipynb
+++ b/Exploration map rendering.ipynb
@@ -83,8 +83,8 @@
     "            x = (x - x_min) * self.conversion * self.scale_param[0]\n",
     "            y = (y - y_min) * self.conversion * self.scale_param[1]\n",
     "        else:\n",
-    "            x = x / self.conversion + x_min\n",
-    "            y = y / self.conversion + y_min\n",
+    "            x = x / (self.conversion * self.scale_param[0]) + x_min\n",
+    "            y = y / (self.conversion * self.scale_param[1]) + y_min\n",
     "\n",
     "        coords = [x, y]\n",
     "        return coords\n",
